[project]
name = "reputation"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.6",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "django-stubs>=6.0.5",
    "djangorestframework-stubs>=3.17.0",
    "drf-spectacular>=0.29.0",
    "ruff>=0.15.18",
]

[tool.ruff]
target-version = "py314"
line-length = 88
exclude = [
    ".git",
    "__pycache__",
    "migrations",
    "venv",
    ".venv",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "DJ",
    "UP",
]
ignore = ["E501"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
known-first-party = ["src"]
combine-as-imports = true
